# sanddice-cpp

./: CMakeLists.txt  README.md  ezbuild.sh  install.sh  main.cpp  sanddice-new.desktop  sandstuff.py  window.h
arch-package/: PKGBUILD  sanddice-1.0.0.tar.xz  sanddice-new.desktop
